fixed layout issue with horizontal scroll bars

--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -11,15 +11,7 @@ body {
 
 
 .wrapper {
-  width:80%;
   max-width:900px;
-}
-
-.navigation {
-}
-
-.navigation-entry {
-  font-weight:100 !important;
 }
 
 .header {
@@ -37,10 +29,3 @@ body {
   font-weight: 100;
 }
 
-
-.typeset {
-  p {
-    margin:1em 0;
-    // line-height:1.4em;
-  }
-}
